# nb_authx

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  test_auth_comprehensive.py  test_complete_integration.py  test_user_comprehensive.py  validate_endpoints.py  validate_startup.py
app/: config.py  database.py  dependencies.py  security.py
app/api/: api.py  deps.py
app/api/v1/: admin.py  audit.py  auth.py  health.py  location.py  operations.py  organization.py  role.py  user.py  user_location_access.py
app/core/: __init__.py  config.py  infrastructure.py  security.py  utils.py
app/db/: __init__.py  session.py  utils.py
app/middleware/: monitoring.py
app/models/: __init__.py  admin.py  audit.py  base.py  location.py  location_group.py  organization.py  organization_settings.py  role.py  user.py  user_device.py  user_location_access.py
app/routers/: audit.py  auth.py  locations.py  organizations.py  roles.py  users.py
app/schemas/: __init__.py  admin.py  admin_management.py  audit.py  auth.py  base.py  location.py  organization.py  organization_settings.py  role.py  user.py  user_location_access.py
app/services/: __init__.py  admin_management_service.py  audit_service.py  auth_service.py  email_service.py  google_maps_service.py  location_service.py  monitoring_service.py  organization_service.py  role_service.py  super_admin_service.py  user_location_access_service.py  user_service.py
app/templates/emails/: email_verification.html  email_verification.txt  password_reset.html  password_reset.txt  security_alert.html  security_alert.txt  welcome.html  welcome.txt
app/utils/: __init__.py  db_init.py  helpers.py  security.py  validation.py
authx_sdk/: README.md  __init__.py  client.py  exceptions.py  models.py  pyproject.toml
docs/: API_DOCUMENTATION.md  AuthX_API_Collection.postman_collection.json  AuthX_Environment.postman_environment.json  COMPLETE_API_DOCUMENTATION.md  POSTMAN_COLLECTION_GUIDE.md
extra/: AuthX_API_Collection.postman_collection.json  AuthX_Complete_Postman_Collection.json  AuthX_Postman_Collection.json  DB_MIGRATION_GUIDE.md  PRODUCTION_GUIDE.md  seed_database.py
migrations/: env.py
migrations/versions/: 2023090101_initial_schema.py  20250903_100156_final_migration_with_all_models_and_.py  20250904_101353_user_microservices_setup.py  20250908_073847_remove_mfa_fields_optimization.py  20250909_082045_add_hierarchical_user_management.py  20250926_082018_fresh_migration_with_complete_.py
scripts/: seed_database.py
test/: conftest.py  test_admin.py  test_audit.py  test_auth.py  test_location.py  test_organization.py  test_role.py  test_user.py
