[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authx-sdk"
version = "1.0.0"
description = "Official Python SDK for AuthX Authentication Service"
authors = [
    {name = "AuthX Team", email = "team@authx.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx-mock>=0.10.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Documentation = "https://docs.authx.com/sdk"
Repository = "https://github.com/authx-team/authx-sdk-python"
Issues = "https://github.com/authx-team/authx-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["authx_sdk"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
